--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: sans !important;
 }
+
 .navbar{
     font-family: sans !important;
     font-size: 1rem;
@@ -9,13 +10,19 @@ body{
 .fs-10{
     font-size:0.8rem;
 }
+
 .add-register-btn-header{
     background-color: var(--brand-color);
     
 }
+
 .add-register-btn-header:hover{
     
     background-color: var(--brand-color-hover);
     transition: all 1s;
+}
 
+.nav-item:hover{
+    background-color: #eee;
+    transition: all .5s;
 }
