--- a/divar-First-index/CSS/style.css
+++ b/divar-First-index/CSS/style.css
@@ -20,3 +20,8 @@ a{
     font-size:0.9rem;
     font-weight: bold;
 }
+
+.input-focus:focus-within {
+    border: 1px solid var(--brand-color) !important;
+    box-shadow: none !important;
+}
