--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -26,3 +26,114 @@ body{
     background-color: #eee;
     transition: all .5s;
 }
+
+/* ----- HEADER ----- */
+
+.navbar-container {
+    max-width: 100% !important;
+    width: 100% !important;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.navbar-right, .navbar-left {
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.navbar-right>*, .navbar-left>* {
+    margin: 0 10px;
+}
+
+.navbar-left {
+    width: 40%;
+}
+
+.navbar-logo {
+    width: 50px;
+    height: 50px;
+}
+
+.navbar-btnNavbarButtons {
+    display: flex;
+    flex-direction: row;
+}
+
+.navbar-btnNavbarButtons:hover {
+    color: black !important;
+}
+
+.navbar-searchBox {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding: 5px 10px;
+    border-radius: 10px;
+    transition: box-shadow .5s;
+}
+
+.navbar-txtSearch {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 16px;
+}
+
+.navbar-txtSearch::placeholder {
+    color: var(--color-gray);
+}
+
+#navbar-smallSearch {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: none;
+    flex-direction: row;
+    align-items: center;
+    z-index: 2;
+}
+
+.navbar-btnHideSmallSearch {
+    font-size: 20px;
+    color: black;
+    margin: 0 10px;
+    cursor: pointer;
+}
+
+.smallSearch-txtSearch {
+    color: black;
+    display: block !important;
+}
+
+.navbar-btnSmallSearch {
+    font-size: 15px;
+    color: black;
+    cursor: pointer;
+    display: none;
+}
+
+.navbar-btnNavbarButtons:last-child {
+    border: none;
+    outline: none;
+    color: white !important;
+    background-color: var(--color-primary);
+}
+
+.navbar-btnNavbarButtons:last-child:hover {
+    background-color: rgb(173, 91, 91);
+}
+
+.navbar-btnNavbarButtons:last-child:focus-within, .navbar-btnNavbarButtons:last-child:active {
+    box-shadow: none !important;
+}
+
+/* ----- End HEADER ----- */
