--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -1,6 +1,3 @@
-body{
-    font-family: sans !important;
-}
 
 .navbar{
     font-family: sans !important;
@@ -28,6 +25,25 @@ body{
 }
 
 .img-card{
-    width: 180px;
-    height: 180px;
+    width: 120px;
+    height: 120px;
+}
+
+.fs-8{font-size: .9rem;}
+.fs-10{font-size: .7rem;}
+
+/* some media query For 767 px to fix cards  */
+@media (max-width: 1166px){
+    .fs-8{
+        font-size: .9rem;
+    }
+}
+
+@media (max-width: 767px){
+    .fs-8{
+        font-size: 1rem;
+    }
+    .fs-10{
+        font-size: .9rem;
+    }
 }
