--- a/divar-Index-Home/Main.css
+++ b/divar-Index-Home/Main.css
@@ -1,11 +1,16 @@
+@font-face {
+    font-family: sans1;
+    src: url('./fonts/sans1.ttf');
+}
+
+
+body{
+    font-family: sans1 !important;
+}    
 
 :root{
     --brand-color:#a62626;
     --brand-color-hover:#c93c3c;
-}
+}    
 
-@font-face {
-    font-family: sans;
-    src: url('../fonts/sans1.ttf');
-}
 
