--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -29,6 +29,14 @@
     height: 120px;
 }
 
+.link-ind-page{
+    text-decoration: none;
+    color: inherit;
+}
+.link-ind-page:hover{
+    color: inherit;
+}
+
 .fs-8{font-size: .9rem;}
 .fs-10{font-size: .7rem;}
 
