update list in sidebar

--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -29,6 +29,10 @@ a {
     transition: all .5s;
 }
 
+.textLight-hover:hover {
+    color: #eee !important;
+}
+
 .img-card{
     width: 120px;
     height: 120px;
