fix index responsive

--- a/customer-page/CSS/style.css
+++ b/customer-page/CSS/style.css
@@ -43,3 +43,10 @@
 .btn-outline-brand{
     border:1px solid var(--brand-color);
 }
+
+.icon-save-share{
+    color: black;
+}
+.icon-save-share:hover{
+    color: black ;
+}
