--- a/divar-Index-Home/Main.css
+++ b/divar-Index-Home/Main.css
@@ -11,7 +11,7 @@ body{
 :root{
     --brand-color:#a62626;
     --brand-color-hover:#c93c3c;
-    --color-gray: #9e9689;
+    --color-gray: #e2e2e29a;
 }
 
 
