--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -32,6 +32,10 @@ a {
     color: #000 !important;
 }
 
+.transition-all-1s {
+    transition: all 1s;
+}
+
 .text-color-brand {
     color: var(--brand-color) !important;
 }
@@ -76,6 +80,12 @@ a {
 
 .input-focus:focus-within {
     border: 2px solid var(--brand-color) !important;
+    box-shadow: none !important;
+}
+
+.bg-switchToggle-brand {
+    background-color: var(--brand-color) !important;
+    border: var(--brand-color) !important;
     box-shadow: none !important;
 }
 
