--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -84,6 +84,12 @@ a {
     border: var(--brand-color) !important;
     box-shadow: none !important;
 }
+.text-black{
+    color: black !important;
+}
+
+
+
 
 /* some media query For 767 px to fix cards  */
 @media (max-width: 1166px) {
