--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -4,8 +4,21 @@ a {
     color: var(--color-gray) !important;
 }
 
+.fs-7{
+    /* font-size: .rem; */
+}
+
+
+.fs-8 {
+    font-size: .9rem;
+}
+
 .fs-10 {
-    font-size: 0.8rem;
+    font-size: .7rem;
+}
+
+.fs-11 {
+    font-size: .8rem;
 }
 
 .add-register-btn-header {
@@ -58,17 +71,6 @@ a {
     color: inherit;
 }
 
-.fs-8 {
-    font-size: .9rem;
-}
-
-.fs-10 {
-    font-size: .7rem;
-}
-
-.fs-11 {
-    font-size: .8rem;
-}
 
 .text-black {
     color: black;
@@ -84,11 +86,16 @@ a {
     border: var(--brand-color) !important;
     box-shadow: none !important;
 }
-.text-black{
-    color: black !important;
+.text-black-muted-cs{
+    color: rgba(0, 0, 0, 0.6) !important;
 }
-
-
+.text-muted-light{
+    color: rgba(0, 0, 0, 0.4) !important;
+    
+}
+.bg-muted-hover:hover{
+    background-color:rgba(0,0,0,0.5) !important;
+}
 
 
 /* some media query For 767 px to fix cards  */
