--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -28,6 +28,18 @@ a {
     color: #000 !important;
 }
 
+.bg-danger-hover:hover {
+    background-color: rgba(219, 97, 97, 0.068) !important;
+}
+
+.border-radius-30 {
+    border-radius: 30px;
+}
+
+.border-radius-circle {
+    border-radius: 50%;
+}
+
 .transition-all-1s {
     transition: all 1s;
 }
