--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -37,6 +37,13 @@ a {
     transition: all .5s;
 }
 
+aside.sidebar {
+    top: 90px;
+    position:fixed;
+    overflow-y:scroll;
+    overflow-x:hidden;
+}
+
 .text-black-hover:hover {
     color: #000 !important;
 }
