--- a/divar-Index-Home/CSS/style.css
+++ b/divar-Index-Home/CSS/style.css
@@ -16,9 +16,16 @@ a {
     font-size: .8rem;
 }
 
+.bg-brand-color{
+    background-color: var(--brand-color);
+}
 .add-register-btn-header {
     background-color: var(--brand-color);
 
+}
+
+.bg-light-owen{
+    background-color: var(--color-gray);
 }
 
 .add-register-btn-header:hover {
@@ -39,6 +46,9 @@ aside.sidebar {
     overflow-x:hidden;
 }
 
+.text-white{
+    color: white !important;
+}
 .text-black-hover:hover {
     color: #000 !important;
 }
@@ -57,6 +67,14 @@ aside.sidebar {
 
 .transition-all-1s {
     transition: all 1s;
+}
+
+.transition-bgcolor-1s {
+    transition: background-color 1s;
+}
+
+.cursor-pointer{
+    cursor: pointer;
 }
 
 .text-color-brand {
@@ -87,7 +105,7 @@ aside.sidebar {
 
 
 .text-black {
-    color: black;
+    color: black !important;
 }
 
 .input-focus:focus-within {
@@ -110,6 +128,7 @@ aside.sidebar {
 .bg-muted-hover:hover{
     background-color:rgba(0,0,0,0.5) !important;
 }
+.hover-light:hover {background-color:rgb(225, 221, 221) ;}
 
 
 /* some media query For 767 px to fix cards  */
