--- a/Python/divar/templates/index-home/index.html
+++ b/Python/divar/templates/index-home/index.html
@@ -95,6 +95,7 @@
                 <div class="dropdown-menu text-muted fs-11  ">
                   <a href="" class="dropdown-item px-4 text-black-muted-cs border-bottom transition-bgcolor-1s ">
                     <!-- if user login to website show username and phone number here  -->
+                    {% if user_status.login == True %}
                     <div class="fs-11 ">
                       <div class="px-1 py-2">
                         <span>کاربر دیوار</span>
@@ -102,9 +103,11 @@
                       </div>
                       <div class="p-1 ">
                         <span class="text-muted-light">تلفن</span>
-                        <span class="text-muted-light">09375465654</span>
+                        <span class="text-muted-light">{{user_status.phone}}</span>
                       </div>
                     </div>
+                    {% endif %}
+
                     <!-- if user login  -->
                     <!-- if not login we show ورود  -->
                     <!-- اگر کاربر وارد نشده بود باید دکمه ورود تنها نشان داده شود و اگر شده ب.ود دیوار من و خروج -->
@@ -115,10 +118,12 @@
                     </a>
                     <!-- if not login we show ورود  -->
                   </a>
+                  {% if user_status.login == True %}
                   <a href="" class="dropdown-item px-5 text-black-muted-cs border-bottom py-3 transition-bgcolor-1s ">
                     <span>آگهی های من</span>
                     <i class=" fs-8 bi bi-book pe-1"></i>
                   </a>
+                  {% endif %}
                   <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 border-bottom transition-bgcolor-1s ">
                     <span>نشان شده ها</span>
                     <i class="bi bi-bookmark"></i>
@@ -135,10 +140,12 @@
                     <span>دیوار برای کسب و کار ها</span>
                     <i class="bi bi-shop-window"></i>
                   </a>
+                  {% if user_status.login == True %}
                   <a href="" class="dropdown-item px-5 text-black-muted-cs py-3 transition-bgcolor-1s ">
                     <span>خروج</span>
                     <i class="bi bi-box-arrow-right"></i>
                   </a>
+                  {% endif %}
 
                 </div>
                 <!-- دیوار من dropdown -->
@@ -735,13 +742,14 @@
             به این ایمیل ارسال خواهد شد.</p>
           <div>
             <!-- email -->
-            <form id="form-register-login" action="/" class="form-inline py-3">
+            <form id="form-register-login" action="{{ url_for('register_user') }}" method="post" class="form-inline py-3">
               <div class="input-group">
-                <input type="text" name="" 
+                <input type="text" name="email" 
                   id="email-form-register-login"
                   class="form-control p-2"
                   placeholder="temp@temp.org">
-              </div>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                </div>
               <!-- email -->
               <div class="terms py-4 fs-8 text-start border-bottom pb-5">
                 <span>
