--- a/Python/divar/templates/register/index.html
+++ b/Python/divar/templates/register/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="mb-3">
                 <label class="mb-1 fs-8" for="emailfield "> ایمیل خود را وارد کنید</label>
-                {{form.email(id="emailfield",class="form-control text-start",placeholder=" temp@temop.org : مثال")}}
+                <input type="email" name="email" class="form-control text-start" placeholder=" temp@temop.org : مثال"  id="emailfield">
             </div>
             <p class="text-center w-100 fs-11 my-2 p-0"> * توجه: حداقل طول پسورد باید 8 کاراکتر باشد *</p>
             <div class="mb-3">
