remove trash files

--- a/Python/divar/templates/base.html
+++ b/Python/divar/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='/first_index/CSS/main.css')}}" />
     <link rel="stylesheet" href="{{ url_for('static' , filename='first_index/CSS/style.css')}}" />
 
-    <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/bootstrap.rtl.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.rtl.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static',filename='index-home/Main.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/header.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/modal-categoris.css') }}" />
