--- a/Python/divar/templates/index-home/index.html
+++ b/Python/divar/templates/index-home/index.html
@@ -6,25 +6,14 @@
   <!-- icon -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- custom css -->
-  <!-- <link rel="stylesheet" href="./CSS/bootstrap.rtl.min.css" /> -->
-  <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/bootstrap.rtl.min.css') }}" />
-  <!-- <link rel="stylesheet" href="./Main.css" /> -->
+  <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.rtl.min.css') }}" />
   <link rel="stylesheet" href="{{ url_for('static',filename='index-home/Main.css') }}" />
-  <!-- <link rel="stylesheet" href="./CSS/footer.css" /> -->
-  <link rel="stylesheet" href="{{ url_for('static',filename='index-home/Main.css') }}" />
-  <!-- <link rel="stylesheet" href="./CSS/header.css" /> -->
   <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/header.css') }}" />
-  <!-- <link rel="stylesheet" href="./CSS/main-card.css" /> -->
   <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/main-card.css') }}" />
-  <!-- <link rel="stylesheet" href="./CSS/modal-categoris.css" /> -->
   <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/modal-categoris.css') }}" />
-  <!-- <link rel="stylesheet" href="./CSS/modal-city.css" /> -->
   <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/modal-city.css') }}" />
-  <!-- <link rel="stylesheet" href="./CSS/sidebar.css" /> -->
   <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/sidebar.css') }}" />
-  <!-- <link rel="stylesheet" href="./CSS/modal-login-header.css" /> -->
   <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/modal-login-header.css') }}" />
-  <!-- <link rel="stylesheet" href="./CSS/style.css" /> -->
   <link rel="stylesheet" href="{{ url_for('static',filename='index-home/CSS/style.css') }}" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -733,55 +722,6 @@
     </div>
   </div>
   <!-- modal of categories -->
-
-<!-- modal login user -->
-  <!-- <div class="modal fade " id="login-user-modal">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content p-3">
-        <div class="modal-header p-4 w-100">
-          <div class="d-flex justify-content-between w-100">
-            <span class="btn btn-close" data-bs-dismiss="modal"></span>
-            <h5>ورود به حساب کاربری</h5>
-          </div>
-        </div>
-        <div class="modal-body ">
-          <h4 class="text-start px-2 py-3">ایمیل خود را وارد کنید</h4>
-          <p dir="rtl" class="fs-8 p-2 text-muted">برای استفاده از امکانات دیوار، لطفاً ایمیل خود را وارد کنید. کد تأیید
-            به این ایمیل ارسال خواهد شد.</p>
-          <div>
-            <form id="form-register-login"
-            action="{{ url_for('index') }}" method="post"
-              class="form-inline py-3">
-              <div class="input-group">
-              <input type="text" name="email" 
-                id="email-form-register-login" 
-                required 
-                class="form-control p-2"
-                placeholder="temp@temp.org">
-              <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-              </div>
-              <div class="terms py-4 fs-8 text-start border-bottom pb-5">
-                <span>
-                  <a href="#" class="text-color-brand">شرایط استفاده از خدمات</a>
-                  و
-                  <a href="#" class="text-color-brand">
-                    حریم خصوصی
-                  </a>
-                  دیوار را می پذیرم
-                </span>
-              </div>
-              <div class=" d-flex">
-                <input type="submit" id="btn-confirm-login-user" value="تایید"
-                  class="mt-3 btn bg-color-brand text-white px-5 py-2 fs-5 ms-auto">
-              </div>
-            </form>
-    
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-<!-- modal login user -->
 
 
 
