--- a/Python/divar/templates/register/index.html
+++ b/Python/divar/templates/register/index.html
@@ -66,10 +66,10 @@
         
 
         <div class="d-flex justify-content-between bg-light">
-            <a href="{{ url_for('login') }}" class=" brand-color-text">
+            <a href="{{ url_for('login') }}" class=" text-black">
                 <span>ورود به حساب کاربری</span>
             </a>
-            <a href="" class="  brand-color-text">
+            <a href="" class="  text-black">
                 <span>رمز عبور خود را فراموش کردید ؟</span>
             </a>
         </div>
