--- a/Python/divar/static/post-page/CSS/style.css
+++ b/Python/divar/static/post-page/CSS/style.css
@@ -1,65 +1,10 @@
-a{
-    text-decoration:none;
-}
+
 .navbar{
     font-size: 1rem;
 }
 .bold-title{
     font-weight: bold;
 }
-
-.fs-6{
-    font-size:0.6rem;
-}
-.fs-7{
-    font-size:0.7rem;
-}
-.fs-8{
-    font-size:0.8rem;
-}
-.fs-9{
-    font-size:0.9rem;
-}
-.fs-10{
-    font-size: 1rem;
-    font-weight: bold;
-}
-
-.fs-11{
-    font-size: 1.1rem ;
-}
-
-.fs-12{
-    font-size: 1.2rem;
-
-}
-.fs-13{
-    font-size: 1.4rem;
-}
-
-.fs-info{
-    font-size: .95rem;
-}
-
-.text-black-hover:hover {
-    color: #000 !important;
-}
-.text-black-muted-cs{
-    color: rgba(0, 0, 0, 0.6) !important;
-}
-
-.bg-brand-color{
-    background-color: var(--brand-color);
-}
-
-.transition-bgcolor-1s{
-    transition: background-color 1s !important;
-}
-
-.cursor-pointer{
-    cursor: pointer;
-}
-
 
 .add-register-btn-header{
     background-color: var(--brand-color);
@@ -77,9 +22,6 @@ a{
     background-color: #eee;
     transition: all .5s;
 }
-.btn-brand{
-    background-color:var(--brand-color);
-}
 
 .hover-light:hover {background-color:rgb(225, 221, 221) ;}
 
@@ -89,13 +31,7 @@ a{
 .bg-light-owen-lighter{
     background-color: var(--color-gray-lighter);
 }
-.text-brand{
-    color: var(--brand-color);
-}
 
-.btn-outline-brand{
-    border:1px solid var(--brand-color);
-}
 
 .icon-save-share:hover{
     color: black  !important;
@@ -126,7 +62,7 @@ a{
 }
 
 .carousel-img{
-     width:100%;
+     width:100% !important;
     height:420px;
 }
 
