--- a/Python/divar/templates/login/index.html
+++ b/Python/divar/templates/login/index.html
@@ -1,54 +1,63 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block body %}
 
-{% block body %}
+<div class="container mt-5 pt-5" dir="rtl" style="margin-top: 4rem">
+  <h1>ورود به حساب کاربری</h1>
 
+  {% with messages = get_flashed_messages(True) %} {% if messages %} {% for
+  category,message in messages %}
+  <div class="alert alert-{{category}} py-2 my-3 show fade">
+    <div class="d-flex justify-content-between align-items-center">
+      <span>{{message}}</span>
+      <button class="btn btn-close" data-bs-dismiss="alert"></button>
+    </div>
+  </div>
+  {% endfor %} {% endif %} {% endwith %}
 
+  <br />
+  <form action="{{url_for('login')}}" method="POST">
+    <div class="form-group">
+      {{form.hidden_tag()}}
+      <label for="email-field">
+        برای ورود به حساب کاربری ایمیل خود را وارد کنید
+      </label>
+      {{form.email(class="form-control text-start" ,placeholder="temp@gmail.com
+      :مثال " , id="email-field")}} {% if form.email.errors %}
+      <div class="w-100 text-center">
+        {% for error in form.email.errors %}
+        <span class="text-danger fs-8">{{error}}</span>
+        {% endfor %}
+      </div>
+      {% endif %}
+      <br />
+      <label for="password-field">رمز عبور خود را وارد نمایید</label>
+      {{form.password(class="form-control", placeholder="حداقل طول پسورد 8
+      کاراکتر می باشد ", id="password-field")}} {% if form.password.errors %}
+      <div class="w-100 text-center">
+        {% for error in form.email.errors %}
+        <span class="text-danger fs-8">{{error}}</span>
+        {% endfor %}
+      </div>
+      {% endif %}
+      <br />
+    </div>
 
-<div class="container mt-5 pt-5" dir="rtl" style="margin-top:4rem ;">
-    
-<h1>ورود به حساب کاربری</h1>
+    <div class="d-flex justify-content-between bg-light">
+      <a href="{{ url_for('register') }}" class="text-black">
+        <span>ساخت حساب کاربری</span>
+      </a>
+      <a href="" class="text-black">
+        <span>رمز عبور خود را فراموش کردید ؟</span>
+      </a>
+    </div>
 
-{% with messages = get_flashed_messages(True) %}
-{% if messages %}
-    {% for category,message in messages %}
-        <div class="alert alert-{{category}} py-2 my-3 show fade">
-            <div class="d-flex justify-content-between align-items-center">
-                <span>{{message}}</span>
-                <button class="btn btn-close" data-bs-dismiss="alert"></button>
-            </div>
-        </div>
-    {% endfor %}
-{% endif %}
-{% endwith %}
-
-    <br>
-    <form action="{{url_for('login')}}" method="POST">
-        <div class="form-group">
-            {{form.hidden_tag()}}
-            <label for="email-field" >
-                برای ورود به حساب کاربری ایمیل خود را وارد کنید
-            </label>
-            {{form.email(class="form-control text-start" ,placeholder="temp@gmail.com :مثال " , id="email-field")}}
-            <br>
-            <label for="password-field">رمز عبور خود را وارد نمایید</label>
-            {{form.password(class="form-control", placeholder="حداقل طول پسورد 8 کاراکتر می باشد ", id="password-field")}}
-            <br>
-        </div>
-        
-
-        <div class="d-flex justify-content-between bg-light">
-            <a href="{{ url_for('register') }}" class="text-black">
-                <span>ساخت حساب کاربری</span>
-            </a>
-            <a href="" class=" text-black">
-                <span>رمز عبور خود را فراموش کردید ؟</span>
-            </a>
-        </div>
-        
-        <div class="text-center mt-5">
-            <input type="submit" value="ورود" class="px-5 py-2 btn add-register-btn-header background-brand text-white">
-        </div>
-    </form>
+    <div class="text-center mt-5">
+      <input
+        type="submit"
+        value="ورود"
+        class="px-5 py-2 btn add-register-btn-header background-brand text-white"
+      />
+    </div>
+  </form>
 </div>
 
 {% endblock %}
