--- a/Python/divar/templates/user/user-base.html
+++ b/Python/divar/templates/user/user-base.html
@@ -3,6 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="{{url_for('static', filename='CSS/style-public.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='profile_user/style.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='CSS/style-public.css')}}">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +42,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-    <script src="{{ url_for('static',filename='index-home/JS/script.js') }}"></script>
+    <link rel="stylesheet" href="{{url_for('static', filename='profile_user/script.js')}}">
 </body>
 
 </html>
